添加网关模块、认证模块 2020-9-11 10点41分 dingxingkai

--- a/micro-customer-service/pom.xml
+++ b/micro-customer-service/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>Customer-Service</artifactId>
+    <artifactId>micro-customer-service</artifactId>
     <packaging>jar</packaging>
     <description>客户服务</description>
 
