添加基础配置模块，并增加Swagger2配置 2020-9-11 15点51分 dingxingkai

--- a/micro-customer-service/pom.xml
+++ b/micro-customer-service/pom.xml
@@ -44,15 +44,6 @@
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-generator</artifactId>
         </dependency>
-        <!--Swagger api-->
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger2</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger-ui</artifactId>
-        </dependency>
         <!--服务端点监控-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -67,6 +58,12 @@
         <dependency>
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
+        </dependency>
+        <!--基础配置模块-->
+        <dependency>
+            <groupId>com.dxk.springcloud</groupId>
+            <artifactId>micro-basic-config</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
