公共模块添加响应实体 2020-9-11 19点51分 dingxingkai

--- a/micro-common-service/pom.xml
+++ b/micro-common-service/pom.xml
@@ -13,6 +13,13 @@
     <packaging>jar</packaging>
     <description>基础、公共模块</description>
 
+    <dependencies>
+        <!--lombok-->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+    </dependencies>
 
 
 
