--- a/micro-auth-service/pom.xml
+++ b/micro-auth-service/pom.xml
@@ -29,6 +29,14 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-oauth2</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-oauth2-resource-server</artifactId>
+        </dependency>
+        <!--<dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-jwt</artifactId>
+        </dependency>-->
         <!--JWT令牌相关-->
         <dependency>
             <groupId>com.nimbusds</groupId>
@@ -39,6 +47,11 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>-->
+        <dependency>
+            <groupId>com.dxk.springcloud</groupId>
+            <artifactId>micro-basic-config</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
 
