--- a/micro-customer-service/pom.xml
+++ b/micro-customer-service/pom.xml
@@ -50,6 +50,11 @@
             <artifactId>micro-basic-config</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!--Redis-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
     </dependencies>
 
 
