--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,7 @@
         <module>micro-common-service</module>
         <module>micro-basic-config</module>
         <module>micro-sms-service</module>
+        <module>micro-email-service</module>
     </modules>
     <packaging>pom</packaging>
 
@@ -36,7 +37,7 @@
         <!--lombok版本-->
         <lombok.version>1.18.12</lombok.version>
         <!--Swagger版本-->
-        <swagger.version>2.8.0</swagger.version>
+        <swagger.version>2.9.2</swagger.version>
         <!--mysql驱动版本-->
         <mysql.version>8.0.21</mysql.version>
         <!--guava版本-->
@@ -114,19 +115,6 @@
                 <groupId>io.springfox</groupId>
                 <artifactId>springfox-swagger2</artifactId>
                 <version>${swagger.version}</version>
-                <!--排除默认引入得guava，下面会单独引入-->
-                <exclusions>
-                    <exclusion>
-                        <groupId>com.google.guava</groupId>
-                        <artifactId>guava</artifactId>
-                    </exclusion>
-                </exclusions>
-            </dependency>
-            <!--guava-->
-            <dependency>
-                <groupId>com.google.guava</groupId>
-                <artifactId>guava</artifactId>
-                <version>${guava.version}</version>
             </dependency>
             <dependency>
                 <groupId>io.springfox</groupId>
@@ -173,6 +161,15 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.8</source>
+                    <target>1.8</target>
+                </configuration>
             </plugin>
         </plugins>
     </build>
