--- a/micro-customer-service/pom.xml
+++ b/micro-customer-service/pom.xml
@@ -50,11 +50,38 @@
             <artifactId>micro-basic-config</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <!--公用模块-->
+        <dependency>
+            <groupId>com.dxk.springcloud</groupId>
+            <artifactId>micro-common-service</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
         <!--Redis-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>
+        <!--fastJson 序列化-->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+        </dependency>
+        <!--mysql连接驱动-->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+        <!--mybatis-plus 核心包 -->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+        </dependency>
+        <!--mybatis-plus持久层(自动生成)-->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-generator</artifactId>
+        </dependency>
+        <!--mybatis-springboot-->
     </dependencies>
 
 
