调试Swagger配置初始化、服务认证 2020-9-17 18点48分 dingxingkai

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <modules>
         <module>micro-customer-service</module>
         <module>micro-gateway-server</module>
-        <module>micro-auth-service</module>
+        <module>micro-oauth-server</module>
         <module>micro-common-service</module>
         <module>micro-basic-config</module>
         <module>micro-sms-service</module>
