--- a/micro-customer-service/pom.xml
+++ b/micro-customer-service/pom.xml
@@ -44,10 +44,10 @@
             <groupId>com.google.guava</groupId>
             <artifactId>guava</artifactId>
         </dependency>
-        <!--基础配置模块-->
+        <!--swagger自动配置模块-->
         <dependency>
             <groupId>com.dxk.springcloud</groupId>
-            <artifactId>micro-basic-config</artifactId>
+            <artifactId>micro-basic-swagger-doc-starter</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <!--公用模块-->
@@ -57,10 +57,10 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <!--Redis-->
-        <dependency>
+        <!--<dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
-        </dependency>
+        </dependency>-->
         <!--fastJson 序列化-->
         <dependency>
             <groupId>com.alibaba</groupId>
@@ -80,6 +80,18 @@
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-generator</artifactId>
+        </dependency>
+        <!--日志配置启动器-->
+        <dependency>
+            <groupId>com.dxk.springcloud</groupId>
+            <artifactId>micro-basic-logging-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <!--redis配置模块-->
+        <dependency>
+            <groupId>com.dxk.springcloud</groupId>
+            <artifactId>micro-basic-redis-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
