--- a/micro-oauth-server/pom.xml
+++ b/micro-oauth-server/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>micro-auth-service</artifactId>
+    <artifactId>micro-oauth-server</artifactId>
     <packaging>jar</packaging>
     <description>权限认证微服务</description>
 
