调整项目结构 2020-9-18 00点23分 dingxingkai

--- a/micro-basic-config/micro-basic-swagger-doc-common/pom.xml
+++ b/micro-basic-config/micro-basic-swagger-doc-common/pom.xml
@@ -26,12 +26,12 @@
         <dependency>
             <groupId>io.springfox</groupId>
             <artifactId>springfox-swagger2</artifactId>
-            <exclusions>
+            <!--<exclusions>
                 <exclusion>
                     <groupId>io.swagger</groupId>
                     <artifactId>swagger-models</artifactId>
                 </exclusion>
-            </exclusions>
+            </exclusions>-->
         </dependency>
         <dependency>
             <groupId>io.springfox</groupId>
