--- a/micro-oauth-server/pom.xml
+++ b/micro-oauth-server/pom.xml
@@ -47,9 +47,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
         </dependency>-->
+        <!--swagger配置模块-->
         <dependency>
             <groupId>com.dxk.springcloud</groupId>
-            <artifactId>micro-basic-config</artifactId>
+            <artifactId>micro-basic-swagger-doc-starter</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
