--- a/micro-common/micro-common-util/pom.xml
+++ b/micro-common/micro-common-util/pom.xml
@@ -3,24 +3,15 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>Alibaba</artifactId>
+        <artifactId>micro-common</artifactId>
         <groupId>com.dxk.springcloud</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>micro-common-service</artifactId>
+    <artifactId>micro-common-util</artifactId>
     <packaging>jar</packaging>
-    <description>基础、公共模块</description>
-
-    <dependencies>
-        <!--lombok-->
-        <dependency>
-            <groupId>org.projectlombok</groupId>
-            <artifactId>lombok</artifactId>
-        </dependency>
-    </dependencies>
-
+    <description>基础工具模块</description>
 
 
 </project>
