--- a/micro-oauth-server/pom.xml
+++ b/micro-oauth-server/pom.xml
@@ -33,10 +33,10 @@
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-oauth2-resource-server</artifactId>
         </dependency>
-        <!--<dependency>
+        <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-jwt</artifactId>
-        </dependency>-->
+        </dependency>
         <!--JWT令牌相关-->
         <dependency>
             <groupId>com.nimbusds</groupId>
