--- a/mirco-business-service/micro-email-service/pom.xml
+++ b/mirco-business-service/micro-email-service/pom.xml
@@ -34,6 +34,28 @@
             <groupId>com.alibaba.cloud</groupId>
             <artifactId>spring-cloud-starter-alibaba-nacos-config</artifactId>
         </dependency>
+        <!--基础模块-->
+        <dependency>
+            <groupId>com.dxk.springcloud</groupId>
+            <artifactId>micro-common-util</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <!--Swagger-->
+        <dependency>
+            <groupId>com.dxk.springcloud</groupId>
+            <artifactId>micro-basic-swagger-doc-starter</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <!--thymeleaf静态模板-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
+        <!--单元测试-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+        </dependency>
     </dependencies>
 
 
