--- a/micro-gateway-server/pom.xml
+++ b/micro-gateway-server/pom.xml
@@ -45,7 +45,7 @@
             <artifactId>micro-common-service</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-security</artifactId>
         </dependency>
@@ -56,7 +56,7 @@
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-jwt</artifactId>
-        </dependency>
+        </dependency>-->
     </dependencies>
 
 
