--- a/mirco-business-service/micro-customer-service/pom.xml
+++ b/mirco-business-service/micro-customer-service/pom.xml
@@ -56,11 +56,6 @@
             <artifactId>micro-common-service</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        <!--Redis-->
-        <!--<dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-redis</artifactId>
-        </dependency>-->
         <!--fastJson 序列化-->
         <dependency>
             <groupId>com.alibaba</groupId>
@@ -92,6 +87,10 @@
             <groupId>com.dxk.springcloud</groupId>
             <artifactId>micro-basic-redis-starter</artifactId>
             <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
     </dependencies>
 
