--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,5 @@
 version: "3"
 services:
-  #mysql主节点
   mysql-master:
     container_name: mysql-master
     image: mysql:5.7
@@ -14,15 +13,13 @@ services:
     restart: always
     hostname: mysql-master
 
-  #熔断、限流
   sentinel:
     image: bladex/sentinel-dashboard:latest
     container_name: sentinel
     ports:
       - "8858:8858"
     restart: always
-
-  #redis
+    
   redis:
     image: redis:latest
     restart: always
@@ -30,3 +27,79 @@ services:
     command: redis-server --requirepass 123456
     ports:
       - "6379:6379"
+      
+  elasticsearch:
+    image: docker.io/elasticsearch:5.6.5
+    environment:
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+    volumes:
+      - D:\IT Environment\Docker-Volumes\efk\elasticsearch\data:/usr/share/elasticsearch/data
+    container_name: elasticsearch565
+    hostname: elasticsearch
+    restart: always
+    ports:
+      - "9200:9200"
+      - "9300:9300"
+      
+  kibana:
+    image: docker.io/kibana:5.6.5
+    environment:
+      - ELASTICSEARCH_URL=http://elasticsearch:9200
+    container_name: kibana565
+    hostname: kibana
+    depends_on:
+      - elasticsearch
+    restart: always
+    ports:
+      - "5601:5601"
+      
+  filebeat:
+      image: docker.elastic.co/beats/filebeat:5.6.5
+      container_name: filebeat565
+      hostname: filebeat
+      restart: always
+      privileged: true
+      depends_on:
+        - elasticsearch
+        
+  webjenkins:
+    container_name: webjenkins
+    image: 'jenkins/jenkins:lts'
+    restart: always
+    environment:
+      TZ: Asia/Shanghai
+    ports:
+      - '3083:8080'
+      - '50001:50000'
+    network_mode: "bridge"
+    
+    
+  oap:
+    image: apache/skywalking-oap-server:6.2.0
+    container_name: skywalking-oap
+    restart: always
+    depends_on:
+      - elasticsearch
+    links:
+      - elasticsearch
+    ports:
+      - 11800:11800
+      - 12800:12800
+    environment:
+      TZ: Asia/Shanghai #设定东八区的城市，防止Oap记录数据时用0时区
+      SW_STORAGE: elasticsearch
+      SW_STORAGE_ES_CLUSTER_NODES: elasticsearch:9200
+         
+  ui:
+    image: apache/skywalking-ui:6.2.0
+    container_name: skywalking-ui
+    depends_on:
+      - oap
+    links:
+      - oap
+    restart: always
+    ports:
+      - 18080:8080 #默认8080端口，这里设置18080映射到宿主机，可修改
+    environment:
+      collector.ribbon.listOfServers: oap:12800
+
