--- a/xxl-job-admin/src/main/resources/application.properties
+++ b/xxl-job-admin/src/main/resources/application.properties
@@ -42,7 +42,7 @@ spring.datasource.hikari.connection-test-query=SELECT 1
 ### xxl-job, email
 spring.mail.host=smtp.qq.com
 spring.mail.port=25
-spring.mail.username=979352276@qq.com
+spring.mail.username=*********@qq.com
 spring.mail.password=pvsnwofegadkbfbd
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
